# QA_TOOL_TKINTER

./: About.py  Administration.py  AssignStations.py  Dockerfile  Forget_Password.py  Login.py  MainMenu.py  Outliers_Anomalies.py  README.md  Register.py  TaskShow.py  docker-compose.yml  main.py  pyproject.toml  userMaintenanceReport.py
qatool/: AssignStations.py  AssignTask2.py  Forget_Password.py  Help.py  Login.py  Register.py  TaskManager.py  UserCreation.py  dataVisualization.py  userMaintenanceReport.py
